# mcp3xxx-rs

./: .travis.yml  Cargo.toml  README.md
.ci/: cargo-config
.github/workflows/: coding-style.yaml  lints.yaml  test-suite.yaml
examples/: mcp3208_differential_read.rs  mcp3208_single_ended_read.rs
src/: device.rs  lib.rs  macros.rs
