[package]
authors = ["Michael Moravec <oss@majkl.me>"]
categories = ["embedded", "hardware-support"]
description = "Rust SPI driver for MCP3xxx family of 10-13-Bit A/D converters."
edition = "2018"
homepage = "https://github.com/trashware/mcp3xxx-rs"
keywords = ["mcp3008", "mcp3208", "mcp3304", "adc", "spi"]
license = "MIT"
name = "mcp3xxx"
readme = "README.md"
repository = "https://github.com/trashware/mcp3xxx-rs"
version = "0.1.0-pre.1"

[dependencies]
rppal = "0.11.3"
